// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/NavUser As Button 1`] = `
<div
  data-css-1ij5lym=""
>
  <button
    className="psds-navuser psds-navuser--clickable"
    onClick={[Function]}
  >
    <div
      aria-hidden={true}
      className="psds-avatar psds-avatar--size-xsmall"
    >
      <img
        className="psds-avatar__image"
        onError={[Function]}
        onLoad={[Function]}
        src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
      />
      <div
        aria-label="Jake Trent"
        className="psds-avatar__initials"
        style={
          Object {
            "backgroundColor": "#7048C6",
          }
        }
      >
        J
      </div>
    </div>
    <div
      className="psds-navuser__words"
    >
      <div
        className="psds-navuser__name"
      >
        Jake Trent
      </div>
      <div
        className="psds-navuser__plan-name"
      />
    </div>
  </button>
</div>
`;

exports[`Storyshots Components/NavUser As Link 1`] = `
<div
  data-css-1ij5lym=""
>
  <a
    className="psds-navuser psds-navuser--clickable"
    href="https://jaketrent.com"
  >
    <div
      aria-hidden={true}
      className="psds-avatar psds-avatar--size-xsmall"
    >
      <img
        className="psds-avatar__image"
        onError={[Function]}
        onLoad={[Function]}
        src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
      />
      <div
        aria-label="Jake Trent"
        className="psds-avatar__initials"
        style={
          Object {
            "backgroundColor": "#7048C6",
          }
        }
      >
        J
      </div>
    </div>
    <div
      className="psds-navuser__words"
    >
      <div
        className="psds-navuser__name"
      >
        Jake Trent
      </div>
      <div
        className="psds-navuser__plan-name"
      />
    </div>
  </a>
</div>
`;

exports[`Storyshots Components/NavUser Avatar Only 1`] = `
<div
  data-css-1ij5lym=""
>
  <div
    className="psds-navuser"
  >
    <div
      aria-hidden={true}
      className="psds-avatar psds-avatar--size-xsmall"
    >
      <img
        className="psds-avatar__image"
        onError={[Function]}
        onLoad={[Function]}
        src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
      />
      <div
        className="psds-avatar__initials"
        style={
          Object {
            "backgroundColor": "#D1487B",
          }
        }
      >
        :)
      </div>
    </div>
    <div
      className="psds-navuser__words"
    >
      <div
        className="psds-navuser__name"
      />
      <div
        className="psds-navuser__plan-name"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NavUser Basic 1`] = `
<div
  data-css-1ij5lym=""
>
  <div
    className="psds-navuser"
  >
    <div
      aria-hidden={true}
      className="psds-avatar psds-avatar--size-xsmall"
    >
      <img
        className="psds-avatar__image"
        onError={[Function]}
        onLoad={[Function]}
        src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
      />
      <div
        aria-label="Jake Trent"
        className="psds-avatar__initials"
        style={
          Object {
            "backgroundColor": "#7048C6",
          }
        }
      >
        J
      </div>
    </div>
    <div
      className="psds-navuser__words"
    >
      <div
        className="psds-navuser__name"
      >
        Jake Trent
      </div>
      <div
        className="psds-navuser__plan-name"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NavUser With Action Menu 1`] = `
<div>
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
    disabled={false}
    onClick={[Function]}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      Click me first
    </span>
  </button>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <br />
  <button
    className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
    disabled={false}
    onClick={[Function]}
  >
    <span
      aria-hidden={false}
      className="psds-button__text"
    >
      Then click me, first menu closes, mine opens
    </span>
  </button>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <br />
  <div
    data-css-1ij5lym=""
  >
    <button
      className="psds-navuser psds-navuser--clickable"
      onClick={[Function]}
    >
      <div
        aria-hidden={true}
        className="psds-avatar psds-avatar--size-xsmall"
      >
        <img
          className="psds-avatar__image"
          onError={[Function]}
          onLoad={[Function]}
          src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
        />
        <div
          aria-label="Then click me, same as 2nd button"
          className="psds-avatar__initials"
          style={
            Object {
              "backgroundColor": "#B28300",
            }
          }
        >
          T
        </div>
      </div>
      <div
        className="psds-navuser__words"
      >
        <div
          className="psds-navuser__name"
        >
          Then click me, same as 2nd button
        </div>
        <div
          className="psds-navuser__plan-name"
        >
          Menu 2 close, Menu 3 open
        </div>
      </div>
    </button>
  </div>
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
</div>
`;

exports[`Storyshots Components/NavUser With Meta 1`] = `
<div
  data-css-1ij5lym=""
>
  <div
    className="psds-navuser"
  >
    <div
      aria-hidden={true}
      className="psds-avatar psds-avatar--size-xsmall"
    >
      <img
        className="psds-avatar__image"
        onError={[Function]}
        onLoad={[Function]}
        src="https://en.gravatar.com/userimage/8399312/b15448d840afacd0eb18102baf788255.jpeg?d=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fps-cdn%2Fdesign-system%2Fassets%2Ftransparent.gif"
      />
      <div
        aria-label="Jake Trent"
        className="psds-avatar__initials"
        style={
          Object {
            "backgroundColor": "#7048C6",
          }
        }
      >
        J
      </div>
    </div>
    <div
      className="psds-navuser__words"
    >
      <div
        className="psds-navuser__name"
      >
        Jake Trent
      </div>
      <div
        className="psds-navuser__plan-name"
      >
        Accenture
      </div>
    </div>
  </div>
</div>
`;
